Style and white space fixes
详见 PR #16 下的讨论

--- a/2019/Homepage/index.css
+++ b/2019/Homepage/index.css
@@ -3,6 +3,10 @@
     margin-left: 10px
 }
 
+.card-body span {
+    margin-left: 0 !important
+}
+
 .card-title {
     text-decoration: none !important;
 }
